--- a/src/app/artist/artist.component.html
+++ b/src/app/artist/artist.component.html
@@ -1,11 +1,26 @@
 <div *ngIf="artist">
-  <header>
+  <header class="artist-header">
     <div *ngIf="artist.images.length > 0">
       <img src="{{artist.images[0].url}}" alt="Image" class="artist-thumb img-circle">
     </div>
+    <h1>{{artist.name}}</h1>
+    <p *ngIf="artist.genres.length > 0">
+      Genres: <span *ngFor="let genre of artist.genres">{{genre}}</span>
+    </p>
   </header>
-  <h1>{{artist.name}}</h1>
-  <p *ngIf="artist.genres.length > 0">
-    Genres: <span *ngFor="let genre of artist.genres">{{artist.genres}}</span>
-  </p>
+
+  <div class="artist-albums">
+    <div class="row">
+      <div *ngFor="let album of albums">
+        <div class="col-md-3">
+          <div class="album well">
+            <img src="{{album.images[0].url}}" alt="" class="album-thumb img-thumbnail">
+            <h4>{{album.name}}</h4>
+            <a routerLink="/album/{{album.id}}" class="btn btn-default btn-block">Album Details</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </div>
